@@ -228,9 +228,10 @@ reset_pick()
 #ifdef OVLB
 
 int
-pick_lock(pick,rx,ry) /* pick a lock with a given object */
+pick_lock(pick,rx,ry,explicit) /* pick a lock with a given object */
 register struct	obj	*pick;
 int rx,ry;
+boolean explicit; /**< Mentioning tool when (un)locking doors? */
 {
 	/* rx and ry are passed only from the use-stethoscope stuff */
 	int picktyp, c, ch;
@@ -283,7 +284,7 @@ int rx,ry;
 	ch = 0;		/* lint suppression */
 
 	/* If this is a stethoscope, we know where we came from */
-	if (picktyp == STETHOSCOPE) {
+	if (rx != 0 && ry != 0) {
 		cc.x = rx; cc.y = ry;
 	} else {
 		if(!get_adjacent_loc((char *)0, "Invalid location!", u.ux, u.uy, &cc)) return 0;
@@ -429,9 +430,11 @@ int rx,ry;
 			return(0);
 		    }
 #endif
-
-		    Sprintf(qbuf,"%sock it?",
-			(door->doormask & D_LOCKED) ? "Unl" : "L" );
+		
+		    Sprintf(qbuf,"%sock it%s%s?",
+			(door->doormask & D_LOCKED) ? "Unl" : "L",
+			explicit ? " with " : "",
+			explicit ? doname(pick) : "");
 
 		    c = yn(qbuf);
 		    if(c == 'n') return(0);
@@ -590,15 +593,25 @@ doopen_indir(x, y)		/* try to open a door in direction u.dx/u.dy */
 
 	if (!(door->doormask & D_CLOSED)) {
 	    const char *mesg;
+	    int locked=FALSE;
 
 	    switch (door->doormask) {
 	    case D_BROKEN: mesg = " is broken"; break;
 	    case D_NODOOR: mesg = "way has no door"; break;
 	    case D_ISOPEN: mesg = " is already open"; break;
-	    default:	   mesg = " is locked"; break;
+	    default:	   mesg = " is locked"; locked = TRUE; break;
 	    }
 	    pline("This door%s.", mesg);
 	    if (Blind) feel_location(cc.x,cc.y);
+	    if (locked) {
+		struct obj *otmp = NULL;
+		if (flags.autounlock &&
+		    ((otmp = carrying(SKELETON_KEY)) ||
+		     (otmp = carrying(CREDIT_CARD)) ||
+		     (otmp = carrying(LOCK_PICK)))) {
+			pick_lock(otmp, cc.x, cc.y, TRUE);
+		}
+	    }
 	    return(0);
 	}
 
